<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="12dp"
    app:cardCornerRadius="12dp"
    app:cardElevation="4dp"
    app:cardBackgroundColor="@color/card_background_neu">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/dialogTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/confirm_deletion"
            android:textColor="#009688"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/dialogMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/are_you_sure_you_want_to_delete_this_student"
            android:textSize="14sp"
            android:textColor="@color/text_primary_dark"
            android:fontFamily="@font/poppins_medium"
            android:layout_marginBottom="12dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="end">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="12dp"
                android:backgroundTint="@android:color/transparent"
                android:text="@string/cancel"
                android:textColor="#00695C"
                android:textSize="14sp"
                app:cornerRadius="8dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonConfirm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yes_delete"
                android:textSize="14sp"
                android:textColor="@color/white"
                android:backgroundTint="@color/dark_red"
                app:cornerRadius="8dp"
                app:icon="@drawable/ic_delete"
                app:iconTint="@color/white"
                app:iconGravity="start" />
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>